# cool-example-api

./: .gitignore  Dockerfile  README.md  dev-requirements.txt  main.py  pyproject.toml
.github/workflows/: deploy_local.yml  deploy_prod.yml  deploy_qa.yml  run_unit_tests.yml
k8s/base/: deployment.yaml  service.yaml
k8s/overlays/prod/: deployment-patch.yaml  ingress.yaml  kustomization.yaml  service-patch.yaml
k8s/overlays/qa/: deployment-patch.yaml  ingress.yaml  kustomization.yaml  service-patch.yaml
src/api/: message_api.py
src/model/: message.py  msg_id_payload.py  msg_payload.py
src/service/: message_service.py
test/api/: test_message_api.py
test/service/: test_message_service.py
test/utils/: test_helper.py
utils/: helper.py
