[project]
name = "Cool Example API"
version = "1.0.6"
description = "A simple template for Cool API applications."

readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
dependencies = "requirements.txt"

[project.optional-dependencies]
dev-requirements = {file = "dev-requirements.txt"}
